--- a/css/styles.css
+++ b/css/styles.css
@@ -61,9 +61,18 @@ body {
 /* Content */
 .content{
   background-color: #ffffff;
-  padding: 10px;
   height: 800px;
-  margin-bottom: 15%;
+  margin-bottom: 1%;
+  margin-left: 15%;
+  margin-right: 15%;
+  padding-top: 5%;
+
+}
+/* Contentbio */
+.contentbio{
+  background-color: #f5f5f5;
+  height: 1000px;
+  margin-bottom: 5%;
   margin-left: 15%;
   margin-right: 15%;
   padding-top: 5%;
@@ -73,6 +82,7 @@ body {
 
  /* Footer */
  .footer {
+  margin-top: 10%;
   padding: 20px;
   text-align: center;
   background: #ddd;
@@ -277,4 +287,97 @@ body {
 .navbar1 a:active {
   background-color: rgb(92, 138, 245);
   color: black;
+}
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/*PROJECTEN*/
+
+/* Position the image container (needed to position the left and right arrows) */
+.containerprojecten {
+  position: relative;
+  margin-left: 10%;
+  margin-right: 10%;
+}
+
+/* Hide the images by default */
+.mySlides {
+  display: none;
+}
+
+/* Add a pointer when hovering over the thumbnail images */
+.cursor {
+  cursor: pointer;
+}
+
+/* Next & previous buttons */
+.prev,
+.next {
+  cursor: pointer;
+  position: absolute;
+  top: 40%;
+  width: auto;
+  padding: 16px;
+  margin-top: -50px;
+  color: rgb(0, 0, 0);
+  font-weight: bold;
+  font-size: 20px;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+  -webkit-user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #000000;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* Container for image text */
+.caption-container {
+  text-align: center;
+  background-color: #222;
+  padding: 2px 16px;
+  color: white;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Six columns side by side */
+.columnprojecten {
+  float: left;
+  width: 16.66%;
+}
+
+/* Add a transparency effect for thumnbail images */
+.demo {
+  opacity: 0.6;
+}
+
+.active,
+.demo:hover {
+  opacity: 1;
 }
