--- a/css/styles.css
+++ b/css/styles.css
@@ -381,3 +381,42 @@ img {
 .demo:hover {
   opacity: 1;
 }
+
+{
+  padding: 25px;
+  background-color: white;
+  color: black;
+  font-size: 25px;
+}
+
+.dark-mode {
+  background-color: black;
+  color: white;
+}
+
+.navbarP5JS {
+  overflow: hidden;
+  background-color: #494949;
+  width: 100%;
+}
+
+.navbarP5JS a {
+  float: left;
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 20px;
+  text-decoration: none;
+}
+
+/* Change color on hover */
+.navbarP5JS a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Change color on active */
+.navbarP5JS a:active {
+  background-color: rgb(92, 138, 245);
+  color: black;
+}
