--- a/css/styles.css
+++ b/css/styles.css
@@ -62,7 +62,7 @@ body {
 .content{
   background-color: #ffffff;
   height: 800px;
-  margin-bottom: 1%;
+  margin-bottom: 5%;
   margin-left: 15%;
   margin-right: 15%;
   padding-top: 5%;
@@ -73,6 +73,17 @@ body {
   background-color: #f5f5f5;
   height: 1000px;
   margin-bottom: 5%;
+  margin-left: 15%;
+  margin-right: 15%;
+  padding-top: 5%;
+
+}
+
+/* ContentAboutMe */
+.contentaboutme{
+  background-color: #ffffff;
+  height: 500px;
+  margin-bottom: 1%;
   margin-left: 15%;
   margin-right: 15%;
   padding-top: 5%;
@@ -380,9 +391,7 @@ img {
 .active,
 .demo:hover {
   opacity: 1;
-}
 
-{
   padding: 25px;
   background-color: white;
   color: black;
@@ -419,4 +428,14 @@ img {
 .navbarP5JS a:active {
   background-color: rgb(92, 138, 245);
   color: black;
+}
+
+.chapter {
+  padding-top: 30px;
+  margin-top: -30px;
+  /* adjust this value to match the height of your navigation bar to make sure it does not overlap your content */
+}
+
+.chapter #Coding4designers {
+  align-items: center;
 }
