--- a/css/styles.css
+++ b/css/styles.css
@@ -70,12 +70,13 @@ body {
 }
 /* Contentbio */
 .contentbio{
-  background-color: #f5f5f5;
+  
   height: 1000px;
   margin-bottom: 5%;
   margin-left: 15%;
   margin-right: 15%;
   padding-top: 5%;
+  background-color: transparent;
 
 }
 
@@ -96,6 +97,15 @@ body {
   text-align: center;
   background: #ddd;
 }
+
+/* Footer Bio */
+.footerbio {
+  margin-top: 10%;
+  padding: 20px;
+  text-align: center;
+  background-color: transparent;
+}
+
 
 /* Slideshow container */
 .slideshow-container {
